# diff_uv

./: .gitattributes  .gitignore  LICENSE  README.md  blue_rov.py  forward_dynamics_example.ipynb  pid.casadi  pyproject.toml  requirements.txt  setup.py  usage.ipynb  uv.ipynb
.github/workflows/: publish-to-test-pypi.yml
diffUV/: __init__.py  base.py  casadi_dynamics.py  controller.py  dynamics.py  dynamics_euler.py  dynamics_quat.py  kinematics.py  simulator.py  system_id.py  torch_base.py  torch_dynamics.py
diffUV/geometry/: operators.py  symbol.py  transformation_matrix.py
diffUV/utils/: __init__.py  dual_quaternion.py  euler_ops.py  operators.py  parameters.py  quaternion_ops.py  symbol.py  symbols.py  torch_ops.py
diff_uv/: dynamics.py
examples/: lab.ipynb  user.py
examples/user/: forward_dynamics.ipynb  uv.ipynb
images/: lab.ipynb
src/: dynamics.py
usage/: F_serialize.ipynb  Linear_model.ipynb  base.ipynb  blue_rov.py  blue_rov_heavy.py  code_generation.ipynb  control_allocation.ipynb  custom_plots.py  dory_mcmc_results_200000.npz  dynamic_matrices_example.ipynb  dynamic_parameter_identification.ipynb  forward_dynamics_example.ipynb  forward_simulation.ipynb  kinematics_example.ipynb  lyapunov_analysis.ipynb  pid_closed_loop_system.ipynb  pid_closed_loop_system_reg.ipynb  pid_controller.ipynb  pwm_thrust.ipynb  rt_angle_unwrapping.ipynb  t200.csv  torch_vs_casadi.ipynb  uv_ekf.ipynb  uv_simulation.ipynb
usage/sample_data/: 20250914_151436_robot_real_.csv  t200.csv
usage/sample_data/20250421_214816/: 20250421_214816_robot_real_.csv
(+5 files in other folders)
